compiled/app-with-yaml/10-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-with-yaml
  namespace: app-with-yaml
spec:
  selector:
    app: app-with-yaml
  ports:
    - name: http
      port: 3000
      targetPort: 3000
