compiled/app-with-yaml/20-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-with-yaml
  namespace: app-with-yaml
spec:
  selector:
    app: app-with-yaml
  ports:
    - name: http
      targetPort: 3000
      port: 3000
